--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "@angular-eslint/template-parser": "19.0.2",
     "@angular/cli": "^19.0.7",
     "@angular/compiler-cli": "^19.0.0",
+    "@playwright/test": "^1.50.0",
     "@types/jasmine": "~5.1.0",
+    "@types/node": "^22.10.10",
     "@typescript-eslint/eslint-plugin": "7.11.0",
     "@typescript-eslint/parser": "7.11.0",
     "angular-cli-ghpages": "^2.0.3",
